Uses hostname variable in options template

--- a/templates/options.conf.j2
+++ b/templates/options.conf.j2
@@ -31,10 +31,10 @@ modsecurity_ruleset=comodo
 apache_ver=2.4
 apache_mpm=auto
 mod_ruid2=yes
-userdir_access=yes
+ugitserdir_access=yes
 harden_symlinks_patch=yes
 use_hostname_for_alias=no
-redirect_host=yourdomain.com
+redirect_host={{ directadmin_hostname }}
 redirect_host_https=no
 
 #WEB Applications Settings
