--- a/templates/options.conf.j2
+++ b/templates/options.conf.j2
@@ -31,7 +31,7 @@ modsecurity_ruleset=comodo
 apache_ver=2.4
 apache_mpm=auto
 mod_ruid2=yes
-ugitserdir_access=yes
+userdir_access=yes
 harden_symlinks_patch=yes
 use_hostname_for_alias=no
 redirect_host={{ directadmin_hostname }}
